2007-10-22  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Gettext.NodeBuilders/TranslationProjectNodeBuilder.cs,
	  MonoDevelop.Gettext/TranslationService.cs: Fixed "Bug 335335 - Gettext
	  addin: updating the translations of MD takes forever".

2007-10-22  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Gettext.NodeBuilders/TranslationProjectNodeBuilder.cs:
	  Updating translations is now done async.

2007-10-22  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Gettext/CatalogParser.cs, MonoDevelop.Gettext/Catalog.cs:
	  Fixed "Bug 335326 - Gettext addin breaks zh_CN.po".

2007-10-12  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Gettext.NodeBuilders/TranslationNodeBuilder.cs,
	  MonoDevelop.Gettext/TranslationProject.cs: Applied changes that were
	  neccassary for to the new FileService.

2007-09-21  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Gettext.addin.xml: Bump MD version.

2007-09-20  Lluis Sanchez Gual <lluis@novell.com> 

	* gtk-gui/MonoDevelop.Gettext.GettextFeatureWidget.cs, gtk-gui/generated.cs,
	  gtk-gui/MonoDevelop.Gettext.POEditorWidget.cs,
	  gtk-gui/MonoDevelop.Gettext.Translator.LanguageChooserDialog.cs,
	  gtk-gui/MonoDevelop.Gettext.Editor.CatalogHeadersWidget.cs,
	  gtk-gui/MonoDevelop.Gettext.TranslationProjectOptionsDialog.cs:
	  Regenerated GUI files.

2007-09-06  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Gettext/TranslationProject.cs: Fixed 82693: Rebuild not
	  working.

2007-09-06  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Gettext/TranslationProject.cs: Fixed 82693: Rebuild not
	  working.

2007-08-10  Lluis Sanchez Gual <lluis@novell.com> 

	* gtk-gui/gui.stetic, MonoDevelop.Gettext.addin.xml,
	  MonoDevelop.Gettext.mdp, Makefile.am,
	  MonoDevelop.Gettext/MakefileHandler.cs, templates/Makefile.am.template,
	  templates/Makefile.template: Added support for makefile generation.

2007-08-09  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Gettext.addin.xml: Changed addin path.
