@@ -81,7 +81,13 @@
     <ProjectReference type="Project" localcopy="False" refto="MonoDevelop.Autotools" />
     <ProjectReference type="Project" localcopy="False" refto="Mono.Addins" />
   </References>
-  <Deployment.LinuxDeployData scriptName="monodevelop.gettext" generatePcFile="False" />
+  <GtkDesignInfo>
+    <ExportedWidgets>
+      <Widget>MonoDevelop.Gettext.POEditorWidget</Widget>
+      <Widget>MonoDevelop.Gettext.EntrySelectionTree</Widget>
+      <Widget>MonoDevelop.Gettext.GettextFeatureWidget</Widget>
+    </ExportedWidgets>
+  </GtkDesignInfo>
   <MonoDevelop.Autotools.MakefileInfo IntegrationEnabled="True" RelativeMakefileName="./Makefile.am" BuildTargetName="" CleanTargetName="" SyncReferences="True" IsAutotoolsProject="True" RelativeConfigureInPath="../../">
     <BuildFilesVar Sync="True" Name="FILES" />
     <DeployFilesVar />
@@ -91,12 +97,6 @@
     <AsmRefVar Sync="True" Name="REFS" Prefix="-r:" />
     <ProjectRefVar Sync="True" Name="REFS" Prefix="-r:" />
   </MonoDevelop.Autotools.MakefileInfo>
-  <GtkDesignInfo>
-    <ExportedWidgets>
-      <Widget>MonoDevelop.Gettext.POEditorWidget</Widget>
-      <Widget>MonoDevelop.Gettext.EntrySelectionTree</Widget>
-      <Widget>MonoDevelop.Gettext.GettextFeatureWidget</Widget>
-    </ExportedWidgets>
-  </GtkDesignInfo>
+  <Deployment.LinuxDeployData scriptName="monodevelop.gettext" generatePcFile="False" />
   <MonoDevelop.Gettext.TranslationInfo />
 </Project>
